Fix #10995 - [Bug] Fix too long name in branch view

--- a/becpg-share/src/main/assembly/web/components/entity-data-lists/entity-versions.css
+++ b/becpg-share/src/main/assembly/web/components/entity-data-lists/entity-versions.css
@@ -66,6 +66,7 @@ div.entity-versions div.nav h6
 .entity-versions div.entity-branches {
 	margin-right : 0;
 	padding: 4px 0 10px;
+    word-break: break-all;
 }
 
 .entity-versions div.entity-branches.current {
